--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-window": "^2.2.3"
+    "react-window": "^2.2.3",
+    "testing-library": "^0.0.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
