--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "api-start": "node server.js",
+    "api-dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -36,6 +40,7 @@
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "nodemon": "^3.1.11",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
